# Todo-CLI

./: .gitignore
todo-cli/: Cargo.toml  diesel.toml  todo-cli.sqlite
todo-cli/macros/: Cargo.toml
todo-cli/macros/src/: lib.rs
todo-cli/migrations/2024-07-21-141934_create_users/: down.sql  up.sql
todo-cli/src/: args.rs  database.rs  main.rs  models.rs  schema.rs
