workspace = { members = ["macros"] }

[package]
name = "todo-cli"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
macros = { path = "./macros" }
chrono = "0.4.38"
colored = "2"
rusqlite = "0.31.0"
structopt = "0.3.26"
diesel_cli = { version = "2.2.1", default-features = false, features = ["sqlite"] }
