[package]
name = "todo-cli"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
chrono = "0.4.38"
colored = "2"
rusqlite = "0.31.0"
structopt = "0.3.26"
diesel = { version = "2.0.0", features = ["sqlite"] }
dotenvy = "0.15.7"

[build-dependencies]
diesel_cli = { version = "2.0.0", features = ["sqlite"] }